--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -8,7 +8,7 @@
       </div>
     {{else}}
       <div class="empty-state">
-        <img src="/images/empty-states/assignment.png" alt="Keine gestellten Aufgaben" class="image"/>
+        <img src="/images/empty-states/assignments.svg" alt="Keine gestellten Aufgaben" class="image"/>
         {{#userHasPermission "COURSE_EDIT" }}
           <h4>Erstelle die erste Aufgabe in deinem Kurs</h4>
           <h6 class="sub-title">
