--- a/views/courses/components/tools.hbs
+++ b/views/courses/components/tools.hbs
@@ -22,7 +22,7 @@
         {{/each}}
       {{else}}
         <div class="empty-state">
-          <img src="/images/empty-states/tool.png" alt="Keine hinzufügten Tools" class="image"/>
+          <img src="/images/empty-states/tools.svg" alt="Keine hinzufügten Tools" class="image"/>
           {{#userHasPermission "TOOL_CREATE" }}
             <h4>Füge dem Kurs Tools hinzu</h4>
             <h6 class="sub-title">
