--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -78,7 +78,7 @@
         </div>
       {{else}}
         <div class="empty-state empty-state-courses">
-          <img src="/images/empty-states/topic.png" alt="Leeres Thema" class="image"/>
+          <img src="/images/empty-states/topics.svg" alt="Leeres Thema" class="image topic-image"/>
           {{#userHasPermission "COURSE_EDIT"}}
             <h4>Erstelle das erste Thema in deinem Kurs</h4>
             <h6 class="sub-title">
