--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -21,7 +21,7 @@
       </div>
     {{else}}
       <div class="empty-state">
-        <img src="/images/empty-states/gruppe.png" alt="Keine erstellte Gruppe" class="image"/>
+        <img src="/images/empty-states/groups.svg" alt="Keine erstellte Gruppe" class="image"/>
         {{#userHasPermission "COURSEGROUP_CREATE"}}
           <h4>Erstelle eine Gruppe</h4>
           <h6 class="sub-title">
