--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -47,7 +47,7 @@
               {{> 'courses/components/courseEmpty'}}
 
               {{#userHasPermission "COURSE_EDIT"}}
-                <div class="row padding-top">
+                <div class="row">
                     <div class="center buttons">
                         <a class="btn btn-secondary btn-lg btn-import-course btn-first">Importiere einen Kurs</a>
                         <a href="/courses/add" class="btn btn-primary btn-lg btn-add">Erstelle deinen ersten Kurs</a>
