--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -80,7 +80,7 @@
         {{/ifeq}}
 
         {{> 'dashboard/components/card_section' section-id="tasks" title="Gestellte Aufgaben" content=homeworks link-text="Zur Aufgabe" step="8" intro="Hier findest du eine Übersicht über deine gestellten Aufgaben. Diese Aufgaben sind mit deinen Schülern geteilt und für diese sichtbar. Du kannst unter dem Punkt “Aufgaben” weitere Aufgaben erstellen und bearbeiten."}}
-        {{> 'dashboard/components/card_section' section-id="mytasks" title="Meine ToDos" content=myhomeworks link-text="Zur Aufgabe" step="9" intro="An dieser Stelle findest du eine Übersicht über deine private “To Do” Liste. Die Aufgaben, die du hier siehst, kannst du selbst unter “Aufgaben” auswählen und bearbeiten. Deine “To Do” Liste ist privat und daher nur für dich einsehbar."}}
+        {{> 'dashboard/components/card_section' section-id="mytasks" title="Private Aufgaben" content=myhomeworks link-text="Zur Aufgabe" step="9" intro="An dieser Stelle findest du eine Übersicht über deine private “To Do” Liste. Die Aufgaben, die du hier siehst, kannst du selbst unter “Aufgaben” auswählen und bearbeiten. Deine “To Do” Liste ist privat und daher nur für dich einsehbar."}}
 
         {{>  'dashboard/components/card_section' section-id="news" title="Neuigkeiten aus meiner Schule" content=news link-text="Weiterlesen" step="10" intro="Hier erhälst du einen Überblick über Neuigkeiten, die zum Beispiel von deiner Schulleitung oder dem Entwicklerteam erstellt werden können."}}
 
