--- a/views/homework/components/homeworkEmptyStudent.hbs
+++ b/views/homework/components/homeworkEmptyStudent.hbs
@@ -3,6 +3,6 @@
 <div class="text-wrapper mx-auto d-block">
   <h2 class="text-center">Mit der Schul-Cloud Aufgaben digital bearbeiten</h2>
   <h5 class="text-muted text-center">
-    In dieser Ansicht siehst du normalerweise eine Übersicht aller Aufgaben.
+    Sobald Aufgaben angelegt wurden, siehst du in dieser Ansicht eine Übersicht.
   </h5>
 </div>
