--- a/views/homework/components/homeworkEmptyTeacher.hbs
+++ b/views/homework/components/homeworkEmptyTeacher.hbs
@@ -3,8 +3,7 @@
 <div class="text-wrapper mx-auto d-block">
   <h2 class="text-center">Mit der Schul-Cloud Aufgaben digital bearbeiten</h2>
   <h5 class="text-muted text-center">
-    In dieser Ansicht siehst du normalerweise eine Übersicht aller Aufgaben.
-Falls du noch keinen Kurs angelegt hast, erstellst du am Besten zuerst einen Kurs, dem du eine Aufgabe zuordnen kannst.
-
+    Sobald Aufgaben angelegt wurden, siehst du in dieser Ansicht eine Übersicht.
+    Falls du noch keinen Kurs angelegt hast, erstellst du am Besten zuerst einen Kurs, dem du eine Aufgabe zuordnen kannst.
   </h5>
 </div>
