--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -186,6 +186,15 @@
     <h4>Veröffentlichungen</h4>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
+            <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
+                <a href="#">
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Technischer Bericht: Die HPI Schul-Cloud: Roll-Out einer Cloud-Architektur für Schulen in Deutschland</b>
+                        <br/>
+                        <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.jpg" />
+                    </div>
+                </a>
+            </div>
             <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Schulrechner-wandern-in-die-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
