welcome landing page route, controller and template

--- a/views/courses/components/courseEmpty.hbs
+++ b/views/courses/components/courseEmpty.hbs
@@ -3,6 +3,6 @@
 <div class="text-wrapper mx-auto d-block">
   <h2 class="text-center">Mit der Schul-Cloud Unterricht digital gestalten</h2>
   <h5 class="text-muted text-center">
-      Ein Kurs in der Schul-Cloud bildet die Grundlage zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
+      Es gibt noch keine Kurse. Ein Kurs in der Schul-Cloud bildet die Grundlage zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
   </h5>
 </div>
