--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -5,14 +5,19 @@
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/courses/course.css"/>
-        <link rel="stylesheet" href="/styles/courses/empty-state.css"/>
     {{/content}}
 
     {{#content "page"}}
         <section class="section-courses">
-          {{#unless emptyState}}
                 {{#if courses}}
                     {{> 'dashboard/components/card_section' section-id="courses" title="" content=courses link-text="Öffnen" additionalInfoName="memberCount"}}
+                {{else}}
+                    <div class="col-xs-12">
+                        <p class="text-muted">
+                            <i class="fa fa-frown-o"></i>
+                            <span>Noch keine Kurse</span>
+                        </p>
+                    </div>
                 {{/if}}
 
                 {{#userHasPermission "COURSE_EDIT"}}
@@ -42,20 +47,6 @@
                     </div>
                 </div>
                 {{/userHasPermission}}
-          {{else}}
-            <div class="empty-state">
-              {{> 'courses/components/courseEmpty'}}
-
-              {{#userHasPermission "COURSE_EDIT"}}
-                <div class="row">
-                    <div class="center buttons">
-                        <a class="btn btn-secondary btn-lg btn-import-course btn-first">Importiere einen Kurs</a>
-                        <a href="/courses/add" class="btn btn-primary btn-lg btn-add">Erstelle deinen ersten Kurs</a>
-                    </div>
-                </div>
-              {{/userHasPermission}}
-            </div>
-          {{/unless}}
 
             {{#embed "lib/components/modal" class="member-modal"}}
                 {{#content "body"}}
