removed extra courseempty component

--- a/views/courses/overview-empty.hbs
+++ b/views/courses/overview-empty.hbs
@@ -10,7 +10,13 @@
     {{#content "page"}}
         <section class="section-courses">
             <div class="empty-state">
-              {{> 'courses/components/courseEmpty'}}
+              <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
+              <div class="text-wrapper mx-auto d-block">
+                <h2 class="text-center">Mit der Schul-Cloud Unterricht digital gestalten</h2>
+                <h5 class="text-muted text-center">
+                    Es gibt noch keine Kurse. Ein Kurs in der Schul-Cloud bildet die Grundlage zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
+                </h5>
+              </div>
 
               {{#userHasPermission "COURSE_EDIT"}}
                 <div class="row">
