--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,6 +1,5 @@
 {{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/homework/overview.css"/>
-    <link rel="stylesheet" href="/styles/courses/empty-state.css"/>
     <link rel="import" href="/vendor/m.e.i.n.e.l/m.e.i.n.e.l.min.html">
 {{/content}}
 {{#content "scripts" mode="append"}}
@@ -13,62 +12,36 @@
     {{#content "page"}}
         <div class="route-homework">
             <section class="section-homework">
-                {{#if homeworks}}
-                  {{#if addButton}}
-                      {{#userHasPermission "HOMEWORK_CREATE"}}
-                      <a href="/homework/new{{#if @root.createPrivate}}?private=true{{/if}}" class="btn btn-primary btn-add create">
-                          <i class="fa fa-plus" aria-hidden="true"></i>
-                          <p>Aufgabe hinzufügen</p>
-                      </a>
-                      {{/userHasPermission}}
-                  {{/if}}
-
-                  <div><feathers-filter id="filter"
-                          filter='{{@root.filterSettings}}'
-                          add-label='Filter hinzufügen'
-                          apply-label='Übernehmen'
-                          cancle-label='Abbrechen'
-                          handle-url='true'
-                  /></div>
-
-                  <ol class="homework">
-                      <div class="row"><div class="col-xl-12">
-                          {{#each homeworks}}
-                              {{> 'homework/components/overview_card_template'}}
-                          {{/each}}
-                      </div></div>
-                      <div class="row">
-                          {{> "lib/components/pagination" settings=pagination }}
-                      </div>
-                  </ol>
-                {{else}}
-                  <div class="empty-state">
-                    {{#unless isStudent}}
-                        {{> 'homework/components/homeworkEmptyTeacher'}}
-                    {{else}}
-                        {{> 'homework/components/homeworkEmptyStudent'}}
-                    {{/unless}}
-
-                    <div class="row">
-                        <div class="center buttons">
-                          {{#if addButton}}
-                              {{#userHasPermission "HOMEWORK_CREATE"}}
-                                  <a href="/homework/new{{#if @root.createPrivate}}?private=true{{/if}}"
-                                     class="btn {{#if ../courses}}btn-primary{{else}}btn-secondary{{/if}} btn-lg btn-add btn-first">
-                                      Erstelle eine Aufgabe
-                                  </a>
-                              {{/userHasPermission}}
-                          {{/if}}
-                          {{#unless courses}}
-                            <a href="/courses/" class="btn btn-primary btn-lg">
-                                Zu den Kursen
-                            </a>
-                          {{/unless}}
-                        </div>
-                    </div>
-                  </div>
+                {{#if addButton}}
+                    {{#userHasPermission "HOMEWORK_CREATE"}}
+                    <a href="/homework/new{{#if @root.createPrivate}}?private=true{{/if}}" class="btn btn-primary btn-add create">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                        <p>Aufgabe hinzufügen</p>
+                    </a>
+                    {{/userHasPermission}}
                 {{/if}}
+                <div><feathers-filter id="filter"
+                        filter='{{@root.filterSettings}}'
+                        add-label='Filter hinzufügen'
+                        apply-label='Übernehmen'
+                        cancle-label='Abbrechen'
+                        handle-url='true'
+                /></div>
 
+                <ol class="homework">
+                    <div class="row"><div class="col-xl-12">
+                        {{#each homeworks}}
+                            {{> 'homework/components/overview_card_template'}}
+                        {{else}}
+                            <p class="text-muted text-center">
+                                <span>Keine Aufgaben.</span>
+                            </p>
+                        {{/each}}
+                    </div></div>
+                    <div class="row">
+                        {{> "lib/components/pagination" settings=pagination }}
+                    </div>
+                </ol>
                 {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
                     {{#content "body"}}
                         <div class="modal-footer">
