added welcome page routing

--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -36,7 +36,7 @@
         <p>
             Bitte überprüfe Deine E-Mail-Adresse:
         </p>
-        
+
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>E-Mail: <sup>*</sup></label>
@@ -82,7 +82,7 @@
       <section data-panel="section-5">
           <h4>Fertig!</h4>
           <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
-          <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
+          <a class="btn btn-primary mt-2" href="/welcome/">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
