--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -64,11 +64,11 @@
         </label>-->
 	  {{/if}}
       </section>
-	
+
      <section data-panel="section-4">
         <h4>Fertig!</h4>
         <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
-        <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
+        <a class="btn btn-primary mt-2" href="/welcome/">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
