--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -58,7 +58,7 @@
       <section data-panel="section-3">
         <h4>Fertig!</h4>
         <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
-        <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
+        <a class="btn btn-primary mt-2" href="/welcome/">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
