--- a/views/firstLogin/welcome.hbs
+++ b/views/firstLogin/welcome.hbs
@@ -6,12 +6,12 @@
         <div class="empty-state">
           <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
           <div class="text-wrapper mx-auto d-block">
-            <h2 class="text-center">Willkommen in der Schul-Cloud, {{currentUser.displayName}}</h2>
+            <h2 class="text-center">Willkommen in der {{theme.short_title}}, {{currentUser.displayName}}</h2>
             {{#if isStudent}}
 
             {{else}}
               <h5 class="text-muted text-center">
-                  Mit der Schul-Cloud Unterricht digital gestalten
+                  Mit der {{theme.short_title}} Unterricht digital gestalten
               </h5>
             {{/if}}
 
