--- a/views/homework/overview-empty.hbs
+++ b/views/homework/overview-empty.hbs
@@ -9,7 +9,7 @@
                   {{#unless isStudent}}
                     <img src="/images/empty-states/add_people.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
                     <div class="text-wrapper mx-auto d-block">
-                      <h2 class="text-center">Mit der Schul-Cloud Aufgaben digital bearbeiten</h2>
+                      <h2 class="text-center">Mit der {{theme.short_title}} Aufgaben digital bearbeiten</h2>
                       <h5 class="text-muted text-center">
                         Sobald Aufgaben angelegt wurden, siehst du in dieser Ansicht eine Übersicht.
                         Falls du noch keinen Kurs angelegt hast, erstellst du am Besten zuerst einen Kurs, dem du eine Aufgabe zuordnen kannst.
@@ -18,7 +18,7 @@
                   {{else}}
                     <img src="/images/empty-states/add_people.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
                     <div class="text-wrapper mx-auto d-block">
-                      <h2 class="text-center">Mit der Schul-Cloud Aufgaben digital bearbeiten</h2>
+                      <h2 class="text-center">Mit der {{theme.short_title}} Aufgaben digital bearbeiten</h2>
                       <h5 class="text-muted text-center">
                         Sobald Aufgaben angelegt wurden, siehst du in dieser Ansicht eine Übersicht.
                       </h5>
