news svg switch

--- a/views/news/overview-empty.hbs
+++ b/views/news/overview-empty.hbs
@@ -4,7 +4,7 @@
 {{#extend "news/news"}}
     {{#content "page"}}
       <div class="empty-state">
-        <img src="/images/empty-states/news_owl.png" alt="News mit der {{theme.short_title}} versenden" class="image mx-auto d-block"/>
+        <img src="/images/empty-states/news.svg" alt="News mit der {{theme.short_title}} versenden" class="image mx-auto d-block"/>
         <div class="text-wrapper mx-auto d-block">
           <h2 class="text-center">Mit der {{theme.short_title}} auf dem neuesten Stand bleiben</h2>
           <h5 class="text-muted text-center">
