--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -192,6 +192,14 @@
   .add-button{
     margin-top: 20px;
     text-align: center;
+    .plus-icon{
+      font-size: 20px;
+      color: $primaryColor;
+    }
+  }
+
+  .first-topic{
+    margin-top: 50px;
   }
 }
 .course-tasks-header, .course-groups-header {
