--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -122,8 +122,8 @@
   }
 
   .times {
-    padding: 16px;
-    box-shadow: 0 1px 1px 0 #C7C7C7 inset;
+    //padding: 16px;
+    //box-shadow: 0 1px 1px 0 #C7C7C7 inset;
     background: none repeat scroll 0 0;
     margin-bottom: 30px;
 
@@ -137,6 +137,11 @@
       padding-left: 5px;
       cursor: pointer;
       color: $primaryColor;
+    }
+
+    .course-times-table{
+      margin-top: 10px;
+      box-shadow: 0 1px 1px 0 #C7C7C7 inset;
     }
   }
 
