--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -16,6 +16,9 @@
   </div>
 
   <button id="prevSection" class="btn btn-secondary" type="button" disabled="disabled">Zurück</button>
-  <button id="nextSection" class="btn btn-primary pull-right" type="submit" value="Submit" 
-    data-next-label="Weiter" data-submit-label="Absenden">Weiter</button>
+  {{#unless manual-submit}}
+    <button id="nextSection" class="btn btn-primary pull-right" type="submit" value="Submit"
+      data-next-label="Weiter" data-submit-label="Absenden">Weiter</button>
+  {{else}}
+  {{/unless}}
 </form>
