--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -15,13 +15,29 @@
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
         <script src="/scripts/spectrum/spectrum.js" type="text/javascript" defer></script>
         <script src="/scripts/spectrum/init.js" type="text/javascript" defer></script>
+        <script src="/scripts/dataprivacy/dataprivacy.js" type="text/javascript" defer></script>
     {{/content}}
 
 
     {{#content "page"}}
         <section class="section-course">
-
-          {{#embed "lib/forms/paginatedForm" sections=3 action=action method=method manual-submit=true}}
+          <h3>{{sectionTitle}}</h3>
+          <p class="text-muted">
+            In einem Kurs wird gemeinsam mit den Teilnehmern an Themen, Hausaufgaben und Dateien gearbeitet.
+          </p>
+          <div class="wizard-card">
+            <div class="step-label-wrapper">
+              <div class="text-muted step-label">
+                Kursdaten
+              </div>
+              <div class="text-muted step-label">
+                Kursmitglieder
+              </div>
+              <div class="text-muted step-label">
+                Abschließen
+              </div>
+            </div>
+          {{#embed "lib/forms/paginatedForm" sections=3 action=action method=method submit-label=submitLabel}}
             {{#content "panels"}}
 
             <section data-panel="section-1">
@@ -146,9 +162,10 @@
                   </span>
               </div>
             </div>
+
             </section>
 
-            <section data-panel="section-2" class="submit-page">
+            <section data-panel="section-2" class="">
               <h4>Du hast es fast geschafft...</h4>
 
               <div class="form-group">
@@ -191,30 +208,48 @@
               </div>
             </section>
 
-            <section data-panel="section-3">
-              <h4>Geschafft!</h4>
-
-              <div class="modal-footer">
-                {{#if course._id}}
-                  <a href="/courses/{{course._id}}/"
-                     class="btn btn-delete-course btn-secondary pull-left"
-                     target="_blank"
-                     data-method="DELETE"
-                     data-name="{{course.name}}"
-                     redirect="/courses/">Kurs löschen</a>
-                {{/if}}
-                  <button type="button" class="btn btn-secondary btn-cancel">
-                      {{closeLabel}}
-                  </button>
-
-                  <button type="submit" class="btn btn-primary btn-submit">
-                      {{submitLabel}}
-                  </button>
+            <section data-panel="section-3" class="submit-page">
+              <div class="final-step">
+                <div class="image">
+                  <img src="" />
+                </div>
+                <div>
+                  <h3>Geschafft!</h3>
+                  <h4 class="text-muted">Was kann ich in einem Kurs machen?</h4>
+                  <h6 class="text-muted">Themen anlegen</h6>
+                  <p class="text-muted">
+                    Themen sind in der Schul-Cloud der Container für dein Unterrichtsmaterial.
+                  </p>
+                  <h6 class="text-muted">Aufgaben stellen</h6>
+                  <p class="text-muted">
+                    Innerhalb eines Kurses/Themas kannst du Aufgaben an deine Teilnehmer
+                    stellen.
+                  </p>
+                  <h6 class="text-muted">Tools hinzufügen</h6>
+                  <p class="text-muted">
+                    In einem Kurs kannst du außerdem Tools zum interaktiven Unterricht
+                  hinzufügen.
+                  </p>
+                </div>
               </div>
+
+              <a class="btn btn-primary pull-right" href="/courses/">Zur Kursübersicht</a>
             </section>
 
           {{/content}}
+
+          {{#content "buttons"}}
+            {{#if course._id}}
+              <a href="/courses/{{course._id}}/"
+                 class="btn btn-delete-course btn-secondary pull-left"
+                 target="_blank"
+                 data-method="DELETE"
+                 data-name="{{course.name}}"
+                 redirect="/courses/">Kurs löschen</a>
+            {{/if}}
+          {{/content}}
         {{/embed}}
+        </div>
 
         {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
             {{#content "body"}}
